--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 DB_USER=postgres
-DB_PASSWORD=123321
+DB_PASSWORD=yourpassword
 DB_NAME=auth_service
 DB_HOST=localhost
 DB_PORT=5432
-JWT_SECRET=secret
+JWT_SECRET=test_secret
