--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,8 @@
-DB_USER=postgres
-DB_PASSWORD=yourpassword
-DB_NAME=auth_service
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-JWT_SECRET=test_secret
+DB_USER=postgres
+DB_PASSWORD=123321
+DB_NAME=auth_service
+
+JWT_SECRET=supersecretkey
+TOKEN_EXPIRY=1h
